search bar added

--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,1 +1,1 @@
-<p>sear-box works!</p>
+<input type="text" class="form-control" [placeholder]="placeholder" (keyup.enter)="onEnter(txtInput.value)" #txtInput>
