--- a/src/app/countries/pages/by-capital/by-capital.component.html
+++ b/src/app/countries/pages/by-capital/by-capital.component.html
@@ -1,5 +1,4 @@
 <h4 class="">Buscar por Capital</h4>
-
-<shared-search-box (onValue)="searchByCapital($event)" [placeholder]="'Buscar por capital'">
-</shared-search-box>
+<shared-search-box (onValue)="searchByCapital($event)" [placeholder]="'Buscar por capital'"></shared-search-box>
 <hr>
+<countries-table [countries]="countries"></countries-table>
