--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 <hr>
 <div class="row">
-  <div class="col-3">
+  <div class="col-md-3 mb-3">
     <app-sidebar></app-sidebar>
   </div>
   <div class="col">
