--- a/src/app/countries/pages/by-country/by-country.component.html
+++ b/src/app/countries/pages/by-country/by-country.component.html
@@ -1,4 +1,4 @@
 <h4>Buscar por País</h4>
-
 <shared-search-box [placeholder]="'Buscar por país'" (onValue)="searchCountry($event)"></shared-search-box>
 <hr>
+<countries-table [countries]="countries"></countries-table>
