--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -4,8 +4,9 @@
 
 <ng-template #info>
   <h4 class="mt-3">Details about {{currentCountry?.name?.common}}</h4>
+  <h6>Official name: {{currentCountry?.name?.official}}</h6>
   <div class="row">
-    <div class="col-2 mt-4">
+    <div class="col-3 mt-4">
       <img [src]="currentCountry?.flags?.svg" [alt]="currentCountry?.name?.common" style="width: 100px;">
     </div>
     <div class="col mt-3">
